finally fixed the inconsistent padding next to some list items but not others; decreased some spacing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -361,18 +361,19 @@ ul.links li img.steam-icon {
   width: 16px;
 }
 ul.links li .loading {
-  margin-left: -25px;
+  margin-left: -15px;
   margin-top: 1px;
 }
 
 ul.links li ul {
-  margin: 1rem 0 0 2.75rem;
+  margin: 0.5rem 0 0 3.2rem;
 }
 ul.links li ul li {
   font-size: 0.8em;
   left: 0.65em;
   line-height: 1.4;
   list-style-type: none;
+  margin-bottom: 0;
   padding: 0;
   position: relative;
 }
